<resources>
    <string name="app_name">eOffApp</string>
    <string name="login">Bejelentkezés</string>
    <string name="myPass">jelszavam</string>
    <string name="myUsername">felhasználónevem</string>
    <string name="passw">Jelszó:</string>
    <string name="username">Felhasználónév</string>
    <string name="registTV">Nincs még fiókja?</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="email">Email cím:</string>
    <string name="email2">emailCímed@vmi.com</string>
    <string name="regisztr_ci_s_lap">Regisztrációs lap</string>
    <string name="cancel">MÉGSEM</string>
    <string name="passAgin">Jelszó újból:</string>
    <string name="registBig">REGISZTRÁCIÓ</string>
    <string name="myAccount">Profilom</string>
    <string name="mero_bedikt">Mérőóra Bediktálás</string>
    <string name="old_readings">Korábbi mérések</string>
</resources>