<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/main"
    tools:context=".RegistActivity"
    android:background="#FFFFFF">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registBig"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:padding="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registEmailET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:hint="myMail@hint.com"
            android:inputType="text|textEmailAddress" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/passw"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registPassET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="myPassw"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/passAgin"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registPass2ET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="myPassw"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="Keresztneved: "
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="Napoleon"
            android:inputType="text|textPersonName" />
    </LinearLayout>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#B39D9D"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/regBtn"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:onClick="registNow"
            android:text="@string/registBig"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>